Fixes #3 | Modified url to match expected format
